[project]
name = "saudi-forecasting-platform"
version = "0.1.0"
description = "Multi-horizon probabilistic forecasting platform for Saudi/Gulf electricity demand and PV generation"
authors = [{ name = "Abdelghafar Fouda" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"

dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forecasting"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/forecasting --cov-report=term-missing"

[tool.coverage.run]
source = ["src/forecasting"]
